Item page title alignment fix (left).

--- a/sources/stylesheets/_content-item.scss
+++ b/sources/stylesheets/_content-item.scss
@@ -270,5 +270,11 @@
 .item-page {
   .content-header {
     margin-bottom: 20px;
+
+    .content-item-title {
+      h1 {
+        text-align: left;
+      }
+    }
   }
 }
